--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
-language: elixir
+language:
+  - elixir
 
 elixir:
   - 1.3.2
 
 opt_release:
   - 18.2
+
+sudo:
+  - required
 
 services:
   - docker
