--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ services:
 
 before_install:
   - docker pull elasticsearch
-  - docker run -d -p 9200:9200 -p 9300:9300 elasticsearch
+  - docker run -d -p 127.0.0.1:9200:9200 elasticsearch
   - docker ps -a
 
 before_script:
