change travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ services:
 
 before_install:
   - docker pull elasticsearch
-  - docker run -d -p 127.0.0.1:9200:9200 elasticsearch
-  - docker ps -a
+  - docker run -d -p 9200:9200 elasticsearch
+  - docker ps
 
 before_script:
-  - sleep 10
+  - sleep 60
 
 script:
   - mix test
