--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,11 @@ sudo:
 services:
   - docker
 
-before_script:
+before_install:
   - docker pull elasticsearch
-  - docker run -d -p 9200:9200 elasticsearch
-  - sleep 60
-  - docker ps
 
 script:
+  - docker run -d -p 9200:9200 elasticsearch
+  - sleep 30
   - docker ps
   - mix test
