--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - docker pull elasticsearch
 
 script:
-  - docker run -d -p 9200:9200 elasticsearch
+  - docker run -d elasticsearch
   - sleep 30
   - docker ps
   - mix test
