--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,10 @@ before_install:
   - docker pull elasticsearch
 
 before_script:
-  - docker run -d -p 127.0.0.1:9500:9200 elasticsearch
+  # - docker run -d -p 127.0.0.1:9500:9200 elasticsearch
+  - docker -d run elasticsearch
 
-script:
+script  :
   - sleep 30
   - docker ps
   # - mix test
