--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 
 before_script:
   # - docker run -d -p 127.0.0.1:9500:9200 elasticsearch
-  - docker -d run elasticsearch
+  - docker run -d elasticsearch
 
 script  :
   - sleep 30
