--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ script  :
   - sudo sysctl -w vm.max_map_count=262144
   - docker run --rm --privileged=true -p 9200:9200 -p 9300:9300 -v "/tmp/elasticsearch/config:/usr/share/elasticsearch/config" -e ES_JAVA_OPTS='-Xms1g -Xmx1g' elasticsearch:5.0.0 elasticsearch >& /dev/null &
   - sleep 15
+  - mix test
   # - sleep 30
   # - whereis elasticsearch
   # - "elasticsearch -v"
