--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,19 @@
-language:
-  - elixir
+language: elixir
 
-elixir:
-  - 1.3.2
+elixir: 1.3.2
 
-opt_release:
-  - 18.2
+opt_release: 18.2
 
-sudo:
-  - false
-
-jdk:
-  - oraclejdk8
-
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
-
-env:
-  global:
-    - WAIT_FOR_ES=1
-  matrix:
-    - ES_VERSION=5.0.0
+sudo: true
 
 before_install:
-  - mkdir /tmp/elasticsearch
-  - wget -O - https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.0.0.tar.gz | tar xz --directory=/tmp/elasticsearch --strip-components=1
-  - /tmp/elasticsearch/bin/elasticsearch --daemonize --path.data /tmp
+  - curl -O https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/deb/elasticsearch/5.0.0/elasticsearch-5.0.0.deb
+  - sudo dpkg -i --force-confnew elasticsearch-5.0.0.deb
+  - 'echo -e "index.number_of_shards: 1\nindex.number_of_replicas: 0" | sudo tee -a /etc/elasticsearch/elasticsearch.yml'
+  - sudo service elasticsearch restart
+  - sleep 15
 
-script  :
-  - sleep 30
+script:
   - whereis elasticsearch
   - "elasticsearch -v"
-  - "curl http://localhost:9200"
   - mix test
