--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ opt_release: 18.2
 sudo: true
 
 before_install:
-  - curl -O https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/deb/elasticsearch/5.0.0/elasticsearch-5.0.0.deb
+  - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.0.0.deb
   - sudo dpkg -i --force-confnew elasticsearch-5.0.0.deb
   - 'echo -e "index.number_of_shards: 1\nindex.number_of_replicas: 0" | sudo tee -a /etc/elasticsearch/elasticsearch.yml'
   - sudo service elasticsearch restart
