--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ opt_release: 18.2
 
 sudo: true
 
+jdk:
+  - oraclejdk8
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+
 before_install:
   - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.0.0.deb
   - sudo dpkg -i --force-confnew elasticsearch-5.0.0.deb
