--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ opt_release: 18.2
 
 sudo: true
 
+jdk:
+  - oraclejdk8
+
 addons:
   apt:
     packages:
@@ -19,7 +22,7 @@ before_install:
   - sleep 15
 
 script:
-  - sudo apt-get update && sudo apt-get install oracle-java8-installer
+  - jdk_switcher use oraclejdk8
   - whereis java
   - java -version
   - whereis elasticsearch
