--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,12 @@ elixir: 1.3.2
 
 opt_release: 18.2
 
-sudo: true
+jdk: oraclejdk8
 
-# jdk:
-#   - oraclejdk8
-#
-# addons:
-#   apt:
-#     packages:
-#       - oracle-java8-installer
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
 
 # before_install:
 #   - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.0.0.deb
