--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-language: elixir
+language: java
 
-elixir: 1.3.2
-
-opt_release: 18.2
+# elixir: 1.3.2
+#
+# opt_release: 18.2
 
 jdk: oraclejdk8
 
