--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,29 @@
-language: java
+language: elixir
 
-# elixir: 1.3.2
-#
-# opt_release: 18.2
+sudo: required
 
-jdk: oraclejdk8
+elixir: 1.3.4
+
+opt_release: 19.1.1
 
 addons:
   apt:
     packages:
       - oracle-java8-installer
+
+before_install:
+  # install java 8
+  - sudo update-java-alternatives -s java-8-oracle
+  - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
+  - export MAX_HEAP_SIZE=128M
+  - export HEAP_NEWSIZE=24M
+  - java -version
+  # install elasticsearch
+  - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.0.0.deb
+  - sudo dpkg -i --force-confnew elasticsearch-5.0.0.deb
+  - sudo service elasticsearch start
+
+
 
 # before_install:
 #   - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.0.0.deb
@@ -28,3 +42,4 @@ addons:
 script:
   - whereis java
   - java -version
+  - mix test
